# rimWorld

./: CMakeLists.txt
docs/: ECS.md  include_order.txt  map.md  task.txt
saves/: entities.json
saves/components/: 13TaskComponent.json  15ActionComponent.json  15CreateComponent.json  15RenderComponent.json  15TargetComponent.json  16StorageComponent.json  17LocationComponent.json  17MovementComponent.json  17ResourceComponent.json  21ConstructionComponent.json
src/: gui.txt  main.cpp
src/components/: component.hpp  componentArray.hpp  componentManager.hpp
src/entities/: entity.hpp
src/render/: render_system.txt  render_system1.txt
src/system/: actionsystem.hpp  create_task.txt  createsystem.hpp  marksystem.hpp  savesystem.hpp  system_interface.hpp  task.txt  taskSystem.cpp  taskSystem.hpp
src/ui/: entityRender.hpp  inputhandler.hpp  mainUI.hpp  ui.hpp  ui.txt  uicomponent.hpp
src/utils/: camara.hpp  controller.hpp  path.hpp  router.hpp  routing.txt
src/world/: world.cpp  world.h  world.hpp  world_cpp.txt  world_h.txt
